# godwoken-scripts

contracts/custodian-lock/src/: entry.rs
contracts/gw-utils/: Cargo.toml
contracts/gw-utils/src/: error.rs  finality.rs
contracts/stake-lock/src/: entry.rs
contracts/state-validator/src/verifications/: challenge.rs
contracts/withdrawal-lock/src/: entry.rs
tests/src/script_tests/: mod.rs  withdrawal.rs
tests/src/script_tests/custodian_lock/: finalize_based_on_block_number.rs  finalize_based_on_timestamp.rs  mod.rs  utils.rs
tests/src/script_tests/stake_lock/: finalize_based_on_block_number.rs  finalize_based_on_timestamp.rs  mod.rs  utils.rs
tests/src/script_tests/state_validator/: enter_challenge.rs  revert.rs  submit_block.rs
tests/src/script_tests/state_validator/cancel_challenge/: mod.rs  tx_execution.rs  tx_signature.rs  withdrawal.rs
tests/src/script_tests/utils/: layer1.rs  rollup.rs
tests/src/testing_tool/: programs.rs
