[package]
name = "gw-utils"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
gw-types = { git = "https://github.com/keroro520/godwoken.git", rev = "8d9b8791dc5789dd22c3faa515a7702c399c4b29", default-features = false }
gw-common = { git = "https://github.com/keroro520/godwoken.git", rev = "8d9b8791dc5789dd22c3faa515a7702c399c4b29", default-features = false }
